--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <script src="./index.html"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
